Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@ function sendToLine() {
 備註：${note.value || "無"}`;
 
   location.href =
-    "https://line.me/R/ti/p/~hihi1105love?text=" +
-    encodeURIComponent(msg);
+    "line://msg/text/" + encodeURIComponent(msg);
 }
 </script>
 
 </body>
 </html>
+
